# paperorchestra-bio

./: .gitignore  HANDOFF.md  README.md  SKILL.md  main.py  paper-builder.skill  pyproject.toml
benchmark/: README.md  benchmark_run_20.json  benchmark_run_v2.json  corpus_candidates.json  fulltext_queue.json  schema.json  v2_extraction_batches.json  v2_missing.json
benchmark/batch_v2/: manifest.json
benchmark/extraction_prompts/: a-fast-approach-for-structural-and-evolutionary-an.txt  a-hippocampus-accumbens-code-guides-goal-directed-.txt  a-multiscale-computational-framework-for-the-devel.txt  a-neural-speech-decoding-framework-leveraging-deep.txt  a-neuroimaging-dataset-during-sequential-color-qua.txt  a-prefrontal-network-model-operating-near-steady-a.txt  a-primary-sensory-cortical-interareal-feedforward-.txt  a-regression-based-approach-to-phylogenetic-recons.txt  a-sumo-e3-ligase-promotes-long-non-coding-rna-tran.txt  a-synergistic-workspace-for-human-consciousness-re.txt  a-translational-mri-approach-to-validate-acute-axo.txt  agent-based-model-demonstrates-the-impact-of-nonli.txt  an-alignment-free-method-for-phylogeny-estimation-.txt  an-allocentric-human-odometer-for-perceiving-dista.txt  an-artificial-intelligence-accelerated-virtual-scr.txt  an-atlas-of-brain-bone-sympathetic-neural-circuits.txt  auditory-cortex-conveys-non-topographic-sound-loca.txt  automatic-ploidy-prediction-and-quality-assessment.txt  benchmarking-copy-number-aberrations-inference-too.txt  benchmarking-metagenomic-classification-tools-for-.txt  dna-foundation-models.txt  (+79 more)
(+2950 files in other folders)
