[project]
name = "paperskill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.93.0",
    "jsonschema>=4.26.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
